--- a/HomePage.html
+++ b/HomePage.html
@@ -11,5 +11,10 @@
     <h1>Cinema Analytics Dashboard</h1>
     <p>Lighting up cinema intelligence through real data</p>
   </header>
+
+  <div class="ticker">
+    <p>🍿 Fun Fact: Friday nights are the most popular for moviegoers! 🎥 Most booked genre last year was Action. 🎫 Average lead booking time is 3.2 days.</p>
+  </div>
+
 </body>
 </html>
