--- a/HomePage.html
+++ b/HomePage.html
@@ -16,5 +16,10 @@
     <p>🍿 Fun Fact: Friday nights are the most popular for moviegoers! 🎥 Most booked genre last year was Action. 🎫 Average lead booking time is 3.2 days.</p>
   </div>
 
+  <section class="intro">
+    <p>This dashboard provides a data-driven look into cinema attendance trends and ticket pricing over the past decade. Discover how the industry has evolved, and gain insights for smarter cinema operations.</p>
+  </section>
+
+
 </body>
 </html>
