--- a/HomePage.html
+++ b/HomePage.html
@@ -20,6 +20,32 @@
     <p>This dashboard provides a data-driven look into cinema attendance trends and ticket pricing over the past decade. Discover how the industry has evolved, and gain insights for smarter cinema operations.</p>
   </section>
 
+  <section class="graph-section">
+    <div class="graph-container">
+      <div class="loader"></div>
+      <p>Embed cinema attendance graph here (Tableau)</p>
+    </div>
+    <div class="graph-container">
+      <div class="loader"></div>
+      <p>Embed average ticket price graph here (Tableau)</p>
+    </div>
+  </section>
+
+  <div class="stat-cards">
+    <div class="stat-card">
+      <h3>📱 Booking Methods</h3>
+      <p>Embed Pie Chart Tableau Here</p>
+    </div>
+    <div class="stat-card">
+      <h3>💰 Revenue Comparison</h3>
+      <p>Embed Revenue Chart Tableau Here</p>
+    </div>
+    <div class="stat-card">
+      <h3>🎬 Top Genre</h3>
+      <p>Action | Comedy | Drama</p>
+    </div>
+  </div>
+
 
 </body>
 </html>
