--- a/HomePage.html
+++ b/HomePage.html
@@ -46,6 +46,17 @@
     </div>
   </div>
 
+  <section class="why-section">
+    <h2 style="color:#00ffe1; text-shadow:0 0 6px #00ffe1;">Why This Matters</h2>
+    <p>This dashboard empowers cinema operators to identify key trends, optimise schedules, maximise revenue, and tailor marketing based on real audience behavior. It's not just data—it's a competitive advantage.</p>
+  </section>
+
+  <div class="visuals-section">
+    <img src="https://i.imgur.com/y2a3L8T.jpg" alt="Cityscape Divider Banner" />
+  </div>
+
+  
+
 
 </body>
 </html>
