--- a/HomePage.html
+++ b/HomePage.html
@@ -55,7 +55,10 @@
     <img src="https://i.imgur.com/y2a3L8T.jpg" alt="Cityscape Divider Banner" />
   </div>
 
-  
+  <div class="admin-button">
+    <button onclick="goToAdminPage()">Admin Page</button>
+  </div>
+
 
 
 </body>
