--- a/HomePage.html
+++ b/HomePage.html
@@ -7,6 +7,8 @@
   <title>Cinema Analytics Dashboard</title>
 </head>
 <body>
+  <div class="parallax-layer"></div>
+
   <header>
     <h1>Cinema Analytics Dashboard</h1>
     <p>Lighting up cinema intelligence through real data</p>
@@ -59,7 +61,11 @@
     <button onclick="goToAdminPage()">Admin Page</button>
   </div>
 
+  <footer>
+    <p>&copy; 2025 Cinema Analytics. All rights reserved.</p>
+  </footer>
 
+  <script src="HomePage.js"></script>
 
 </body>
 </html>
