--- a/HomePage.html
+++ b/HomePage.html
@@ -25,11 +25,11 @@
   <section class="graph-section">
     <div class="graph-container">
       <div class="loader"></div>
-      <p>Embed cinema attendance graph here (Tableau)</p>
+      <p> cinema attendance graph here</p>
     </div>
     <div class="graph-container">
       <div class="loader"></div>
-      <p>Embed average ticket price graph here (Tableau)</p>
+      <p> average ticket price graph here</p>
     </div>
   </section>
 
@@ -54,7 +54,7 @@
   </section>
 
   <div class="visuals-section">
-    <img src="https://i.imgur.com/y2a3L8T.jpg" alt="Cityscape Divider Banner" />
+    <img src="#" alt="Cityscape Divider Banner" />
   </div>
 
   <div class="admin-button">
@@ -69,3 +69,17 @@
 
 </body>
 </html>
+
+
+
+
+
+<div class='tableauPlaceholder' id='viz1747026374104' style='position: relative'><noscript><a href='#'><img alt='avg attendence  ' 
+src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;av&#47;avgattendence&#47;Sheet1&#47;1_rss.png' style='border: none'
+ /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+  <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='avgattendence&#47;Sheet1' />
+  <param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;av&#47;avgattendence&#47;Sheet1&#47;1.png' />
+   <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1747026374104');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+    
