--- a/HomePage.html
+++ b/HomePage.html
@@ -1,85 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="HomePage.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cinema Analytics Dashboard</title>
+  <link rel="stylesheet" href="HomePage.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+ 
 </head>
 <body>
-  <div class="parallax-layer"></div>
-
-  <header>
-    <h1>Cinema Analytics Dashboard</h1>
-    <p>Lighting up cinema intelligence through real data</p>
-  </header>
-
-  <div class="ticker">
-    <p>🍿 Fun Fact: Friday nights are the most popular for moviegoers! 🎥 Most booked genre last year was Action. 🎫 Average lead booking time is 3.2 days.</p>
+  <div class="intro">
+    <div class="intro-text">CINEMA ANALYTICS DASHBOARD</div>
   </div>
 
-  <section class="intro">
-    <p>This dashboard provides a data-driven look into cinema attendance trends and ticket pricing over the past decade. Discover how the industry has evolved, and gain insights for smarter cinema operations.</p>
-  </section>
-
-  <section class="graph-section">
-    <div class="graph-container">
-      <div class="loader"></div>
-      <p> cinema attendance graph here</p>
-    </div>
-    <div class="graph-container">
-      <div class="loader"></div>
-      <p> average ticket price graph here</p>
-    </div>
-  </section>
-
-  <div class="stat-cards">
-    <div class="stat-card">
-      <h3>📱 Booking Methods</h3>
-      <p>Embed Pie Chart Tableau Here</p>
-    </div>
-    <div class="stat-card">
-      <h3>💰 Revenue Comparison</h3>
-      <p>Embed Revenue Chart Tableau Here</p>
-    </div>
-    <div class="stat-card">
-      <h3>🎬 Top Genre</h3>
-      <p>Action | Comedy | Drama</p>
-    </div>
+  <div class="home" id="home">
+    <!-- home page content will go here -->
   </div>
-
-  <section class="why-section">
-    <h2 style="color:#00ffe1; text-shadow:0 0 6px #00ffe1;">Why This Matters</h2>
-    <p>This dashboard empowers cinema operators to identify key trends, optimise schedules, maximise revenue, and tailor marketing based on real audience behavior. It's not just data—it's a competitive advantage.</p>
-  </section>
-
-  <div class="visuals-section">
-    <img src="#" alt="Cityscape Divider Banner" />
-  </div>
-
-  <div class="admin-button">
-    <button onclick="goToAdminPage()">Admin Page</button>
-  </div>
-
-  <footer>
-    <p>&copy; 2025 Cinema Analytics. All rights reserved.</p>
-  </footer>
 
   <script src="HomePage.js"></script>
 
 </body>
 </html>
-
-
-
-
-
-<div class='tableauPlaceholder' id='viz1747026374104' style='position: relative'><noscript><a href='#'><img alt='avg attendence  ' 
-src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;av&#47;avgattendence&#47;Sheet1&#47;1_rss.png' style='border: none'
- /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-  <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='avgattendence&#47;Sheet1' />
-  <param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;av&#47;avgattendence&#47;Sheet1&#47;1.png' />
-   <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1747026374104');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                
-    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-
-    
