--- a/HomePage.html
+++ b/HomePage.html
@@ -15,7 +15,22 @@
   </div>
 
   <div class="home" id="home">
-    <!-- home page content will go here -->
+    <section class="carousel-section">
+      <h2>Now Showing</h2>
+      <div class="carousel-container">
+        <div class="carousel">
+          <div class="card"><img src="img/liloandstitch.jpeg" alt="Lilo and Stitch"><p>Lilo & Stitch</p></div>
+          <div class="card"><img src="img/missionimpossible.jpg" alt="Mission Impossible"><p>Mission Impossible</p></div>
+          <div class="card"><img src="img/peppameetsthebaby.jpg" alt="Peppa Meets the Baby"><p>Peppa Meets the Baby</p></div>
+          <div class="card"><img src="img/bringherback.jpeg" alt="Bring Her Back"><p>Bring Her Back</p></div>
+          <div class="card"><img src="img/finaldestination.webp" alt="Final Destination Bloodlines"><p>Final Destination: Bloodlines</p></div>
+          <div class="card"><img src="img/thunderbolts.jpeg" alt="Thunderbolts"><p>Thunderbolts</p></div>
+          <div class="card"><img src="img/sinners.jpg" alt="Sinners"><p>Sinners</p></div>
+          <div class="card"><img src="img/SaunkanSaunkanay2.jpg" alt="Saunkan Saunkanay 2"><p>Saunkan Saunkanay 2</p></div>
+          <div class="card"><img src="img/clowninacornfield.jpg" alt="Clown in a Cornfield"><p>Clown in a Cornfield</p></div>
+        </div>
+      </div>
+    </section>
   </div>
 
   <script src="HomePage.js"></script>
