--- a/HomePage.html
+++ b/HomePage.html
@@ -47,6 +47,38 @@
         </section>
       </div>
 
+      <section class="quick-stats">
+        <h2>Quick Stats</h2>
+        <div class="stats-grid">
+          <div class="stat-card">
+            <h3>🎟️ 2,548</h3>
+            <p>Today's Attendance</p>
+            <span class="trend up">+5.6%</span>
+          </div>
+          <div class="stat-card">
+            <h3>🍿 Action</h3>
+            <p>Top Genre (This Week)</p>
+            <span class="trend up">+18% from last week</span>
+          </div>
+          <div class="stat-card">
+            <h3>💸 $182,400</h3>
+            <p>Total Revenue (This Month)</p>
+            <span class="trend stable">↔ Strong growth</span>
+          </div>
+          <div class="stat-card">
+            <h3>📅 Saturday 8PM</h3>
+            <p>Peak Viewing Time</p>
+            <span class="trend note">Plan promotions!</span>
+          </div>
+          <div class="stat-card">
+            <h3>🎬 Bloodlines</h3>
+            <p>Highest Retention</p>
+            <span class="trend up">89% watched till end</span>
+          </div>
+        </div>
+      </section>
+    </div>
+
       <!-- Placeholder sections -->
       <div class="page-section" id="revenue"><h2>Revenue & Attendance</h2></div>
       <div class="page-section" id="genre"><h2>Genre Analytics</h2></div>
