--- a/HomePage.html
+++ b/HomePage.html
@@ -79,6 +79,38 @@
       </section>
     </div>
 
+      <!-- WHY TF WONT THIS WORK 
+
+    <section class="spotlight">
+      <h2>🌟 Spotlight of the Week</h2>
+      <div class="spotlight-container">
+        <img src="https://i.imgur.com/d4JLkWJ.jpg" alt="Sinners">
+        <div class="spotlight-info">
+          <h3>Sinners</h3>
+          <p><strong>Director:</strong> Ryan Coogler</p>
+          <p><strong>Box Office:</strong> $350M Worldwide</p>
+          <p><strong>Main Cast:</strong> Michael B.Jordon, Hailee Steinfield, Miles Caton, Wunmi Mosaku</p>
+          <p>A haunting tale of guilt and redemption in a post-apocalyptic setting. Follow a group of outcasts facing their darkest secrets.</p>
+          <a href="https://youtube.com" target="_blank" class="trailer-btn">▶ View Trailer</a>
+        </div>
+      </div>
+    </section>
+    
+    <section class="coming-soon">
+      <h2>🎬 Coming Soon</h2>
+      <div class="carousel coming-carousel">
+          <div class="card"><img src="img/karatekid.jpg" alt="Karate Kid"><p>Karate Kid</p></div>
+          <div class="card"><img src="img/thuglife.jpg" alt="Thug Life"><p>Thug Life</p></div>
+          <div class="card"><img src="img/m3gan.jpg" alt="M3GAN 2.0"><p>M3GAN 2.0</p></div>
+          <div class="card"><img src="img/smurf.jpg" alt="Smurfs"><p>Smurfs</p></div>
+          <div class="card"><img src="img/superman.webp" alt="Superman"><p>Superman</p></div>
+          <div class="card"><img src="img/dhadak2.jpg" alt="Dhadak 2"><p>Dhadak 2</p></div>
+          <div class="card"><img src="img/thebadguys2.jpg" alt="The Bad Guys 2"><p>The Bad Guys 2</p></div>
+          <div class="card"><img src="img/theblackphone.webp" alt="The Black Phone 2"><p>The Black Phone 2</p></div>
+        </div>
+    </section>
+    -->
+    
       <!-- Placeholder sections -->
       <div class="page-section" id="revenue"><h2>Revenue & Attendance</h2></div>
       <div class="page-section" id="genre"><h2>Genre Analytics</h2></div>
@@ -92,4 +124,7 @@
 
 </body>
 </html>
+
+
+
 
