--- a/HomePage.html
+++ b/HomePage.html
@@ -51,27 +51,27 @@
         <h2>Quick Stats</h2>
         <div class="stats-grid">
           <div class="stat-card">
-            <h3>🎟️ 2,548</h3>
+            <h3>2,548</h3>
             <p>Today's Attendance</p>
             <span class="trend up">+5.6%</span>
           </div>
           <div class="stat-card">
-            <h3>🍿 Action</h3>
+            <h3>Action</h3>
             <p>Top Genre (This Week)</p>
             <span class="trend up">+18% from last week</span>
           </div>
           <div class="stat-card">
-            <h3>💸 $182,400</h3>
+            <h3>$182,400</h3>
             <p>Total Revenue (This Month)</p>
             <span class="trend stable">↔ Strong growth</span>
           </div>
           <div class="stat-card">
-            <h3>📅 Saturday 8PM</h3>
+            <h3>Saturday 8PM</h3>
             <p>Peak Viewing Time</p>
             <span class="trend note">Plan promotions!</span>
           </div>
           <div class="stat-card">
-            <h3>🎬 Bloodlines</h3>
+            <h3>Bloodlines</h3>
             <p>Highest Retention</p>
             <span class="trend up">89% watched till end</span>
           </div>
@@ -82,7 +82,7 @@
       <!-- WHY TF WONT THIS WORK 
 
     <section class="spotlight">
-      <h2>🌟 Spotlight of the Week</h2>
+      <h2>Spotlight of the Week</h2>
       <div class="spotlight-container">
         <img src="https://i.imgur.com/d4JLkWJ.jpg" alt="Sinners">
         <div class="spotlight-info">
@@ -97,7 +97,7 @@
     </section>
     
     <section class="coming-soon">
-      <h2>🎬 Coming Soon</h2>
+      <h2>Coming Soon</h2>
       <div class="carousel coming-carousel">
           <div class="card"><img src="img/karatekid.jpg" alt="Karate Kid"><p>Karate Kid</p></div>
           <div class="card"><img src="img/thuglife.jpg" alt="Thug Life"><p>Thug Life</p></div>
